# albert-ML-youtube-spam-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deck.md  deck.pptx  index.html  main.py  ml.ipynb  pyproject.toml
.github/workflows/: deploy.yaml  presentation.yaml  test.yaml
backend/src/spam_detector/: app.py  interfaces.py  services.py
backend/tests/: test_app.py
chrome-extension/: content.js  manifest.json
frontend/: manifest.json
notebooks/: Init.ipynb  Main.ipynb  eda.ipynb
src/albert_ml_youtube_spam_detection/: __init__.py
src/spam_detector/: app.py  interfaces.py  services.py
src/spam_detector/models/: model.joblib  train_model.py
src/spam_detector/models/data/: yt_comments_5000.csv
src/spam_detector/models/dump/: spam_detector.joblib
tests/: test_app.py
