[project]
name = "albert-ml-youtube-spam-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mintyfrankie", email = "77310871+mintyfrankie@users.noreply.github.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "mlflow>=2.17.0",
    "python-dotenv>=1.0.1",
]
