[project]
name = "albert-ml-youtube-spam-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mintyfrankie", email = "77310871+mintyfrankie@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "fastapi[cors]>=0.115.2",
    "requests>=2.32.3",
    "aiohttp>=3.10.10",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "mlflow>=2.17.0",
    "python-dotenv>=1.0.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spam_detector"]
